[gd_scene load_steps=13 format=3 uid="uid://ctlxdll74pd6e"]

[ext_resource type="PackedScene" uid="uid://bvc2tbhju26hj" path="res://Mesh/Parts/Body/FeminineBody/FeminineBody.glb" id="1_y7j6w"]
[ext_resource type="Script" uid="uid://ctusa2pckufj3" path="res://Mesh/Parts/Body/FeminineBody/feminine_body.gd" id="2_3rtfg"]
[ext_resource type="Script" uid="uid://b17qxyq8oh4kq" path="res://Game/Doll/doll_attach_to.gd" id="2_i5sai"]
[ext_resource type="Material" uid="uid://c8vrimhqhhto8" path="res://Mesh/Parts/Body/FeminineBody/SkinBodySmartMat.tres" id="4_f00mj"]
[ext_resource type="Material" uid="uid://1axcwsr088nr" path="res://Mesh/Parts/Body/FeminineBody/Materials/GenitalsMat.tres" id="5_e373p"]
[ext_resource type="Material" uid="uid://crmsb1gfa4uhb" path="res://Mesh/Parts/Body/FeminineBody/Materials/NipplesMat.tres" id="6_87rsm"]
[ext_resource type="Material" uid="uid://dj84k4ovj7x3j" path="res://Mesh/Parts/Body/FeminineBody/Materials/PubicHairMat.tres" id="7_e373p"]
[ext_resource type="Script" uid="uid://conllg2gdcesx" path="res://Mesh/Parts/Util/Body/belly_bulge_tracker.gd" id="10_e373p"]
[ext_resource type="PackedScene" uid="uid://b7cbiv3il0ixo" path="res://Mesh/Util/marker_blendshaped.tscn" id="11_d17xq"]
[ext_resource type="PackedScene" uid="uid://bgux6rpndyvti" path="res://Mesh/Materials/MyLayeredTexture/my_layered_texture.tscn" id="11_sj2jt"]
[ext_resource type="PackedScene" uid="uid://3omr6ntpyb48" path="res://Game/Doll/doll_attach_point.tscn" id="11_uprqo"]
[ext_resource type="Script" uid="uid://cagnjeusnic0p" path="res://Mesh/Parts/Util/Body/HoleTrackerForDoll.gd" id="12_uprqo"]

[node name="FeminineBody" instance=ExtResource("1_y7j6w")]
script = ExtResource("2_3rtfg")
bodyMat = ExtResource("4_f00mj")

[node name="rig" parent="." index="0" node_paths=PackedStringArray("skeletonMeshes")]
script = ExtResource("2_i5sai")
attachPoint = "body"
skeletonMeshes = [NodePath("Skeleton3D/Body"), NodePath("Skeleton3D/DigiLegs"), NodePath("Skeleton3D/MaleCrotch"), NodePath("Skeleton3D/NeckConnector"), NodePath("Skeleton3D/NeckConnectorFurry"), NodePath("Skeleton3D/Nipples"), NodePath("Skeleton3D/PlantiLegs"), NodePath("Skeleton3D/PubicHair"), NodePath("Skeleton3D/FemaleCrotch"), NodePath("Skeleton3D/NeckConnectorFurryFull")]

[node name="Body" parent="rig/Skeleton3D" index="0"]
surface_material_override/0 = ExtResource("4_f00mj")

[node name="DigiLegs" parent="rig/Skeleton3D" index="1"]
unique_name_in_owner = true
visible = false
surface_material_override/0 = ExtResource("4_f00mj")

[node name="FemaleCrotch" parent="rig/Skeleton3D" index="2"]
surface_material_override/0 = ExtResource("4_f00mj")
surface_material_override/1 = ExtResource("5_e373p")

[node name="MaleCrotch" parent="rig/Skeleton3D" index="3"]
visible = false
surface_material_override/0 = ExtResource("4_f00mj")
surface_material_override/1 = ExtResource("5_e373p")

[node name="NeckConnector" parent="rig/Skeleton3D" index="4"]
unique_name_in_owner = true
visible = false
surface_material_override/0 = ExtResource("4_f00mj")

[node name="NeckConnectorFurry" parent="rig/Skeleton3D" index="5"]
unique_name_in_owner = true
surface_material_override/0 = ExtResource("4_f00mj")

[node name="NeckConnectorFurryFull" parent="rig/Skeleton3D" index="6"]
visible = false
surface_material_override/0 = ExtResource("4_f00mj")

[node name="Nipples" parent="rig/Skeleton3D" index="7"]
unique_name_in_owner = true
lod_bias = 100.0
blend_shapes/NipplesAnime = 1.0
surface_material_override/0 = ExtResource("6_87rsm")

[node name="PlantiLegs" parent="rig/Skeleton3D" index="8"]
unique_name_in_owner = true
surface_material_override/0 = ExtResource("4_f00mj")

[node name="PubicHair" parent="rig/Skeleton3D" index="9"]
lod_bias = 100.0
surface_material_override/0 = ExtResource("7_e373p")

[node name="BodyLayeredTexture" parent="." index="1" instance=ExtResource("11_sj2jt")]
unique_name_in_owner = true
resolution = Vector2i(2048, 2048)
graphicsOptionAutoScale = 1

[node name="CumLayer" parent="." index="2" instance=ExtResource("11_sj2jt")]
unique_name_in_owner = true
resolution = Vector2i(256, 256)
clearColor = Color(0, 0, 0, 1)

[node name="VaginaHoleTracker" type="Node" parent="." index="3" node_paths=PackedStringArray("dollPart", "crotchMeshes")]
script = ExtResource("12_uprqo")
dollPart = NodePath("..")
crotchMeshes = [NodePath("../rig/Skeleton3D/FemaleCrotch"), NodePath("../rig/Skeleton3D/PubicHair")]
openShapekeyMult = 2.2
pullShapekeyMult = 0.5

[node name="AnusHoleTracker" type="Node" parent="." index="4" node_paths=PackedStringArray("dollPart", "crotchMeshes")]
script = ExtResource("12_uprqo")
holeType = 1
dollPart = NodePath("..")
crotchMeshes = [NodePath("../rig/Skeleton3D/FemaleCrotch"), NodePath("../rig/Skeleton3D/PubicHair"), NodePath("../rig/Skeleton3D/MaleCrotch")]
openShapekey = "AnusOpenedWide"
openShapekeyMult = 2.0
pullShapekey = "AnusPull"

[node name="BellyBulgeTracker" type="Node" parent="." index="5" node_paths=PackedStringArray("dollPart", "bodyMeshes")]
script = ExtResource("10_e373p")
dollPart = NodePath("..")
bodyMeshes = [NodePath("../rig/Skeleton3D/Body")]
bulgeShapekeyMult = 2.0

[node name="BreastLAttach" type="Node3D" parent="." index="6"]
script = ExtResource("2_i5sai")
attachPoint = "breast.L"

[node name="MarkerBlendshaped" parent="BreastLAttach" index="0" instance=ExtResource("11_d17xq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.249)
blendshapes = Dictionary[String, float]({
"BodySize": 0.0,
"BreastsBig": 0.0,
"BreastsCleavage": 0.0,
"BreastsFlat": 0.0,
"BreastsHuge": 0.0,
"BreastsShape": 0.0,
"Fat": 0.0,
"Muscles": 0.0,
"Thick": 0.0,
"ThinVery": 0.0
})
blendshapesData = Dictionary[String, Vector3]({
"BodySize": Vector3(0.00201949, -0.0127878, 0.0285344),
"BreastsBig": Vector3(-0.000253007, -0.0162516, 0.0380869),
"BreastsCleavage": Vector3(-0.0193616, 0.00542237, 0.00740767),
"BreastsFlat": Vector3(-0.00131722, 0.00694816, -0.0316098),
"BreastsHuge": Vector3(-0.0075251, -0.0516979, 0.116481),
"BreastsShape": Vector3(-0.001814, 0.00188494, 0.00267816),
"Fat": Vector3(0.00087488, -0.00857871, 0.0168519),
"Muscles": Vector3(-0.00830813, -0.000765995, 0.0174012),
"Thick": Vector3(-0.00281418, -0.00213891, 0.00469473),
"ThinVery": Vector3(0.00087488, 0.0042176, -0.0120793)
})

[node name="BodySize" type="Marker3D" parent="BreastLAttach/MarkerBlendshaped/BlendshapesMarkers" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00201949, -0.0127878, 0.0285344)
visible = false
gizmo_extents = 0.1

[node name="Muscles" type="Marker3D" parent="BreastLAttach/MarkerBlendshaped/BlendshapesMarkers" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00830813, -0.000765995, 0.0174012)
visible = false
gizmo_extents = 0.1

[node name="ThinVery" type="Marker3D" parent="BreastLAttach/MarkerBlendshaped/BlendshapesMarkers" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00087488, 0.0042176, -0.0120793)
visible = false
gizmo_extents = 0.1

[node name="Fat" type="Marker3D" parent="BreastLAttach/MarkerBlendshaped/BlendshapesMarkers" index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00087488, -0.00857871, 0.0168519)
visible = false
gizmo_extents = 0.1

[node name="Thick" type="Marker3D" parent="BreastLAttach/MarkerBlendshaped/BlendshapesMarkers" index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00281418, -0.00213891, 0.00469473)
visible = false
gizmo_extents = 0.1

[node name="BreastsBig" type="Marker3D" parent="BreastLAttach/MarkerBlendshaped/BlendshapesMarkers" index="5"]
transform = Transform3D(1, -1.49012e-08, 2.98023e-08, 1.49012e-08, 1, 2.98023e-08, 0, 0, 1, -0.000253007, -0.0162516, 0.0380869)
visible = false
gizmo_extents = 0.1

[node name="BreastsCleavage" type="Marker3D" parent="BreastLAttach/MarkerBlendshaped/BlendshapesMarkers" index="6"]
transform = Transform3D(1, -7.45058e-08, 1.49012e-07, 1.49012e-08, 1, 2.98023e-08, 0, 2.98023e-08, 1, -0.0193616, 0.00542237, 0.00740767)
visible = false
gizmo_extents = 0.1

[node name="BreastsFlat" type="Marker3D" parent="BreastLAttach/MarkerBlendshaped/BlendshapesMarkers" index="7"]
transform = Transform3D(1, -7.45058e-08, 1.49012e-07, 1.49012e-08, 1, 2.98023e-08, 0, 2.98023e-08, 1, -0.00131722, 0.00694816, -0.0316098)
visible = false
gizmo_extents = 0.1

[node name="BreastsShape" type="Marker3D" parent="BreastLAttach/MarkerBlendshaped/BlendshapesMarkers" index="8"]
transform = Transform3D(1, -7.45058e-08, 1.49012e-07, 1.49012e-08, 1, 2.98023e-08, 0, 2.98023e-08, 1, -0.001814, 0.00188494, 0.00267816)
visible = false
gizmo_extents = 0.1

[node name="BreastsHuge" type="Marker3D" parent="BreastLAttach/MarkerBlendshaped/BlendshapesMarkers" index="9"]
transform = Transform3D(1, -7.45058e-08, 1.49012e-07, 1.49012e-08, 1, 2.98023e-08, 0, 2.98023e-08, 1, -0.0075251, -0.0516979, 0.116481)
visible = false
gizmo_extents = 0.1

[node name="DollAttachPoint" parent="BreastLAttach/MarkerBlendshaped/Target" index="0" instance=ExtResource("11_uprqo")]
pointName = "nipple.L"

[node name="BreastRAttach" type="Node3D" parent="." index="7"]
script = ExtResource("2_i5sai")
attachPoint = "breast.R"

[node name="MarkerBlendshaped" parent="BreastRAttach" index="0" instance=ExtResource("11_d17xq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.249)
blendshapes = Dictionary[String, float]({
"BodySize": 0.0,
"BreastsBig": 0.0,
"BreastsCleavage": 0.0,
"BreastsFlat": 0.0,
"BreastsHuge": 0.0,
"BreastsShape": 0.0,
"Fat": 0.0,
"Muscles": 0.0,
"Thick": 0.0,
"ThinVery": 0.0
})
mirrorX = true
blendshapesData = Dictionary[String, Vector3]({
"BodySize": Vector3(0.00201949, -0.0127878, 0.0285344),
"BreastsBig": Vector3(-0.000253007, -0.0162516, 0.0380869),
"BreastsCleavage": Vector3(-0.0193616, 0.00542237, 0.00740767),
"BreastsFlat": Vector3(-0.00131722, 0.00694816, -0.0316098),
"BreastsHuge": Vector3(-0.0075251, -0.0516979, 0.116481),
"BreastsShape": Vector3(-0.001814, 0.00188494, 0.00267816),
"Fat": Vector3(0.00087488, -0.00857871, 0.0168519),
"Muscles": Vector3(-0.00830813, -0.000765995, 0.0174012),
"Thick": Vector3(-0.00281418, -0.00213891, 0.00469473),
"ThinVery": Vector3(0.00087488, 0.0042176, -0.0120793)
})

[node name="DollAttachPoint" parent="BreastRAttach/MarkerBlendshaped/Target" index="0" instance=ExtResource("11_uprqo")]
pointName = "nipple.R"

[connection signal="onTextureUpdated" from="BodyLayeredTexture" to="." method="_on_body_layered_texture_on_texture_updated"]
[connection signal="onTextureUpdated" from="CumLayer" to="." method="_on_cum_layer_on_texture_updated"]

[editable path="BreastLAttach/MarkerBlendshaped"]
[editable path="BreastRAttach/MarkerBlendshaped"]
